<?xml version="1.0"?>
<package format="3">
  <name>user_nodes</name>
  <version>0.1.0</version>
  <description>Example overlay workspace package for your own ROS 2 nodes.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

